maple-core-macro/tests/ui/element-fail.stderr
error: unexpected token
 --> $DIR/element-fail.rs:4:45
  |
4 |     let _: TemplateResult<G> = template! { p.my-class#id };
  |                                             ^

error: expected `=`
 --> $DIR/element-fail.rs:6:50
  |
6 |     let _: TemplateResult<G> = template! { button(disabled) };
  |                                                  ^^^^^^^^^^

error: expected `=`
 --> $DIR/element-fail.rs:7:50
  |
7 |     let _: TemplateResult<G> = template! { button(on:click) };
  |                                                  ^^^^^^^^^^

error: unknown directive `unknown`
 --> $DIR/element-fail.rs:8:51
  |
8 |     let _: TemplateResult<G> = template! { button(unknown:directive="123") };
  |                                                   ^^^^^^^

error: expected `=`
  --> $DIR/element-fail.rs:10:52
   |
10 |     let _: TemplateResult<G> = template! { button(a.b.c="123") };
   |                                                    ^
